tests/comp/sem/invalid/assign_to_rvalue-2.mj
class A {

	public boolean test()
	{
		/*** test() = true; ***/
	}

	public static void main(String[] args) {
	}

}
